changed list formed